K8s/depl-platforms2.yaml
# DEPLOYMENTS
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-platforms2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice2
  template:
    metadata:
      labels:
        app: platformservice2
    spec:
      containers:
      - name: platformservice2
        image: ahsansoftengineer/platformservice2:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---
# CLUSTER IP FOR PLATFORM SERVICE
# apiVersion: v1
# kind: Service
# metadata:
#   name: srv-clusterip-platforms
# spec:
#   type: ClusterIP
#   selector:
#     app: platformservice
#   ports:
#   - name: platformservice
#     protocol: TCP
#     port: 8080
#     targetPort: 8080
#   # GRPC Port
#   - name: platformgrpc
#     protocol: TCP
#     port: 666
#     targetPort: 666
