K8s/depl-mssql-plat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
          - containerPort: 1433
        # resources:
        #   limits:
        #     memory: 2Gi # 512Mi
        #     cpu: "2"
        #   requests:
        #     memory: 2Gi # 512Mi
        #     cpu: "2"
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: claimss-mssql

---
# CLUSTER IP FOR MS SQL SERVICE
apiVersion: v1
kind: Service
metadata:
  name: srv-mssql-clusterip
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port : 1433
    targetPort: 1433

---
# CLUSTER IP FOR MS SQL LOAD BALANCER
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-mssql
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port : 1433
    targetPort: 1433
