K8s/srv-np-platforms-np.yaml
# NODE PORT
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 8082
    targetPort: 8080
