K8s/srv-np-platforms.yaml
# NODE PORT
apiVersion: v1
kind: Service
metadata:
  name: srv-platformnpservice
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 8082
    targetPort: 8080
