K8s/srv-np-platforms2.yaml
# NODE PORT
apiVersion: v1
kind: Service
metadata:
  name: srv-np-platforms
spec:
  type: NodePort
  selector:
    app: platformservice2
  ports:
  - name: platformservice2
    protocol: TCP
    port: 8080
    targetPort: 8080
