K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' 
  labels:
    name: ingress-srv
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: /api/platforms
        backend:
          service:
            name: platforms-clusterip-srv
            port: 
              number: 8080
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: commands-clusterip-srv
            port:
              number: 8080
