K8s/srv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srv-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' 
  labels:
    name: srv-ingress
spec:
  rules:
  # UPDATE host file 127.0.0.1 ahsan.host.com
  # Ubuntu -> /etc/host 
  # Win -> C:/Windows/System32/drivers/etc/host
  - host: ahsan.host.com 
    http:
      paths:
      - pathType: Prefix
        path: /api/platform
        backend:
          service:
            name: srv-clusterip-platforms
            port: 
              number: 8080
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: srv-clusterip-commands
            port:
              number: 8080
      # Additional Route for Swagger
      # - pathType: Prefix
      #   path: /platforms
      #   backend:
      #     service:
      #       name: srv-clusterip-platforms
      #       port: 
      #         number: 8080
      # - pathType: Prefix
      #   path: /commands
      #   backend:
      #     service:
      #       name: srv-clusterip-commands
      #       port: 
      #         number: 8080
      # Default Routes for Swagger
      # - pathType: Prefix
      #   path: /
      #   backend:
      #     service:
      #       name: srv-clusterip-platforms
      #       port: 
      #         number: 8080
